<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
    android:background="@drawable/gradiente02"
tools:context=".Actividades.LoginFbUser">


    <ImageView
        android:id="@+id/imgLogo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        android:contentDescription="@string/app_name"
        android:src="@drawable/ic_robot"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
    android:id="@+id/txtInicia"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="10dp"
    android:text="@string/inicia_sesi_n"
    android:textColor="@color/colorWhite"
    android:textSize="20sp"
    android:textStyle="bold"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@id/imgLogo" />
<TextView
    android:id="@+id/txtDescripcionLog"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/asistente_virtual_adaug"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    android:textColor="@color/colorWhite"
    android:textSize="12sp"
    android:textAllCaps="true"
    android:gravity="center"
    app:layout_constraintTop_toBottomOf="@id/txtInicia"
    />
<TextView
    android:id="@+id/txtEmail"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:layout_marginTop="30dp"
    android:layout_marginStart="10dp"
    android:text="@string/correo"
    android:textAllCaps="true"
    android:textColor="@color/colorWhite"
    android:textSize="13sp"
    app:layout_constraintEnd_toEndOf="@id/ViewCorreoDivision"
    app:layout_constraintStart_toEndOf="@+id/imgCorreo"
    app:layout_constraintTop_toBottomOf="@id/txtDescripcionLog"

    />
<EditText
    android:id="@+id/inputUser"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:layout_marginStart="10dp"
    android:background="@null"
    android:gravity="top"
    android:paddingLeft="10dp"
    android:hint="@string/correo_gmail_com"
    android:inputType="textEmailAddress"
    android:minHeight="35dp"
    android:textColor="@color/colorWhite"
    android:textColorHint="@color/colorWhite"
    android:textSize="17sp"
    app:layout_constraintEnd_toEndOf="@id/ViewCorreoDivision"
    app:layout_constraintStart_toEndOf="@id/imgCorreo"
    app:layout_constraintTop_toBottomOf="@id/txtEmail"

    />
<View
    android:id="@+id/ViewCorreoDivision"
    android:layout_width="match_parent"
    android:layout_height="1dp"
    android:layout_marginStart="50dp"
    android:layout_marginEnd="50dp"
    android:background="@color/colorWhite"
    app:layout_constraintTop_toBottomOf="@id/inputUser"
    />
<ImageView
    android:id="@+id/imgCorreo"
    android:layout_marginStart="8dp"
    android:layout_width="28dp"
    android:layout_height="28dp"
    android:src="@drawable/arroba"
    android:tint="@color/colorWhite"
    android:contentDescription="@string/app_name"
    app:layout_constraintTop_toTopOf="@+id/txtEmail"
    app:layout_constraintBottom_toTopOf="@+id/ViewCorreoDivision"
    app:layout_constraintStart_toStartOf="@id/ViewCorreoDivision"
    />

<TextView
    android:id="@+id/txtPass"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:layout_marginTop="30dp"
    android:layout_marginStart="10dp"
    android:text="@string/contrase_a"
    android:textAllCaps="true"
    android:textColor="@color/colorWhite"
    android:textSize="13sp"
    app:layout_constraintEnd_toEndOf="@id/ViewCorreoDivision"
    app:layout_constraintStart_toEndOf="@+id/imgCorreo"
    app:layout_constraintTop_toBottomOf="@id/ViewCorreoDivision"
    />

<EditText
    android:id="@+id/inputContrasena"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:layout_marginStart="10dp"
    android:background="@null"
    android:gravity="top"
    android:hint="@string/passw"
    android:inputType="textPassword"
    android:paddingLeft="10dp"
    android:minHeight="35dp"
    android:textColor="@color/colorWhite"
    android:textColorHint="@color/colorWhite"
    android:textSize="17sp"
    app:layout_constraintEnd_toEndOf="@id/ViewCorreoDivision"
    app:layout_constraintStart_toEndOf="@id/imgCorreo"
    app:layout_constraintTop_toBottomOf="@id/txtPass"
    tools:ignore='Autofill'
    />
<ImageView
    android:id="@+id/imgPass"
    android:layout_marginStart="8dp"
    android:layout_width="28dp"
    android:layout_height="28dp"
    android:src="@drawable/pass"
    android:tint="@color/colorWhite"
    android:contentDescription="@string/app_name"
    app:layout_constraintBottom_toTopOf="@+id/ViewPassDivision"
    app:layout_constraintStart_toStartOf="@+id/ViewCorreoDivision"
    app:layout_constraintTop_toBottomOf="@id/ViewCorreoDivision"
    />
<View
    android:id="@+id/ViewPassDivision"
    android:layout_width="match_parent"
    android:layout_height="1dp"
    android:layout_marginStart="50dp"
    android:layout_marginEnd="50dp"
    android:background="@color/colorWhite"
    app:layout_constraintTop_toBottomOf="@id/inputContrasena"
    />

    <Button
        android:id="@+id/btnIniciaSesion"
        android:layout_width="wrap_content"
        android:layout_height="45dp"
        android:layout_marginTop="28dp"
        android:background="@drawable/btn_background"
        android:textColor="@drawable/style_button_txt_back"
        android:onClick="Ingresar"
        android:paddingLeft="30dp"
        android:paddingRight="30dp"
        android:text="@string/inicia_sesi_n"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ViewPassDivision" />

    <TextView
        android:id="@+id/txtRegistro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:onClick="Registro"
        android:text="@string/registro_de_cuenta"
        android:textColor="@color/colorWhite"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnIniciaSesion" />


</androidx.constraintlayout.widget.ConstraintLayout>