<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradiente02"
    tools:context=".Actividades.Ubicacion">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/txtMuestraUbicacion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:gravity="center"
            android:layout_gravity="center"
            android:textColor="@color/colorWhite"
            android:fontFamily="casual"
             />

        <TextView

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorWhite"
            android:textSize="16sp"
            android:layout_marginLeft="20dp"
            android:textStyle="bold"
            android:text="@string/correo" />

        <EditText
            android:id="@+id/edtCorreo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:fontFamily="casual"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="10dp"
            android:inputType="textPersonName"
            android:textColor="@color/colorWhite"
            android:hint="@string/correo" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorWhite"
            android:textSize="16sp"
            android:layout_marginLeft="20dp"
            android:textStyle="bold"
            android:text="@string/nombre_de_contacto" />
        <EditText
            android:id="@+id/edtNombreContac"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:fontFamily="casual"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="10dp"
            android:textColor="@color/colorWhite"
            android:textColorHint="@color/colorWhite"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:text="@string/numero_de_celular"
            android:textColor="@color/colorWhite"
            android:textSize="16sp"
            android:textStyle="bold" />
        <EditText
            android:id="@+id/edtNumero"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="casual"
            android:ems="10"
            android:inputType="number"
            android:textColor="@color/colorWhite"
            android:textColorHint="@color/colorWhite"/>

        <Button
            android:id="@+id/btnGuardaUbicacion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:paddingRight="30dp"
            android:paddingLeft="30dp"
            android:background="@drawable/btn_background"
            android:textColor="@drawable/style_button_txt_back"
            android:text="@string/guardar_y_enviar"
            android:textSize="20sp" />

        <Button
            android:id="@+id/btnListarUbicaciones"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingRight="30dp"
            android:paddingLeft="30dp"
            android:layout_gravity="center"
            android:background="@drawable/btn_background"
            android:textColor="@drawable/style_button_txt_back"
            android:text="@string/listar_ubicacion"
            android:textSize="20sp"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>